--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+# configure server port
+server.port=8080
 
+# configure active profile
+spring.profiles.active=dev
+
+# configure datasource
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=videocoursepostgres
+spring.datasource.password=videocoursepostgres@123
+spring.datasource.url=jdbc:postgresql://localhost:5432/videocoursedb
+
+# configure jpa
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# configure liquibase
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.liquibase.enabled=true
+
+# configure thymeleaf
+spring.thymeleaf.check-template-location=false
