--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
             <version>1.5.5.Final</version>
         </dependency>
 
+        <!-- This dependency is for realtime Springdoc API -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -106,7 +113,7 @@
                 </configuration>
             </plugin>
 
-            <!-- This plug-in is for Mapstruct and Mapstruct-Lombok binding -->
+            <!-- This plug-in is for Mapstruct, Mapstruct-Lombok binding, JPA Model Gen -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -126,6 +133,11 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok-mapstruct-binding</artifactId>
                             <version>0.2.0</version>
+                        </path>
+                        <path>
+                            <groupId>org.hibernate</groupId>
+                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <version>6.1.7.Final</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
