--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,16 @@ spring.liquibase.enabled=true
 
 # configure thymeleaf
 spring.thymeleaf.check-template-location=false
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/docs
+
+# configure file system and classpath resources
+file.server-path=D:\\Documents\\video course api\\
+file.client-path=/file/**
+file.base-uri=http://localhost:8080/file/
+file.download-uri=http://localhost:8080/api/v1/files/download/
+
+# configure file upload
+spring.servlet.multipart.max-request-size=15MB
+spring.servlet.multipart.max-file-size=15MB
