--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,11 @@ file.download-uri=http://localhost:8080/api/v1/files/download/
 # configure file upload
 spring.servlet.multipart.max-request-size=15MB
 spring.servlet.multipart.max-file-size=15MB
+
+# configure mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=suonvicheak991@gmail.com
+spring.mail.password=ceno lwln bgvw jujv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
