--- a/src/main/resources/db/changelog/001_init_db_structure.yml
+++ b/src/main/resources/db/changelog/001_init_db_structure.yml
@@ -38,17 +38,6 @@ databaseChangeLog:
       - createTable:
           columns:
             - column:
-                constraints:
-                  nullable: false
-                name: category_id
-                type: INTEGER
-            - column:
-                name: course_cost
-                type: numeric(38, 2)
-            - column:
-                name: course_duration_in_hour
-                type: INTEGER
-            - column:
                 autoIncrement: true
                 constraints:
                   nullable: false
@@ -57,21 +46,43 @@ databaseChangeLog:
                 name: course_id
                 type: BIGINT
             - column:
+                name: course_cost
+                type: numeric(38, 2)
+            - column:
+                name: course_description
+                type: TEXT
+            - column:
+                name: course_duration_in_hour
+                type: INTEGER
+            - column:
+                name: course_image
+                type: VARCHAR(255)
+            - column:
+                name: number_of_like
+                type: BIGINT
+            - column:
+                name: number_of_view
+                type: BIGINT
+            - column:
                 constraints:
                   nullable: false
                 name: course_title
                 type: VARCHAR(150)
             - column:
-                name: course_description
-                type: TEXT
-            - column:
-                name: course_image
-                type: VARCHAR(255)
-            - column:
                 constraints:
                   nullable: false
                 name: course_uuid
                 type: VARCHAR(255)
+            - column:
+                constraints:
+                  nullable: false
+                name: category_id
+                type: INTEGER
+            - column:
+                constraints:
+                  nullable: false
+                name: user_id
+                type: BIGINT
           tableName: courses
       - createTable:
           columns:
@@ -89,6 +100,56 @@ databaseChangeLog:
                 name: role_name
                 type: VARCHAR(100)
           tableName: roles
+      - createTable:
+          columns:
+            - column:
+                autoIncrement: true
+                constraints:
+                  nullable: false
+                  primaryKey: true
+                  primaryKeyName: subscription_details_pkey
+                name: subscription_detail_id
+                type: BIGINT
+            - column:
+                name: approved
+                type: BOOLEAN
+            - column:
+                constraints:
+                  nullable: false
+                name: subscription_cost
+                type: numeric(38, 2)
+            - column:
+                constraints:
+                  nullable: false
+                name: course_id
+                type: BIGINT
+            - column:
+                constraints:
+                  nullable: false
+                name: subscription_id
+                type: BIGINT
+          tableName: subscription_details
+      - createTable:
+          columns:
+            - column:
+                autoIncrement: true
+                constraints:
+                  nullable: false
+                  primaryKey: true
+                  primaryKeyName: subscriptions_pkey
+                name: subscription_id
+                type: BIGINT
+            - column:
+                constraints:
+                  nullable: false
+                name: author_id
+                type: BIGINT
+            - column:
+                constraints:
+                  nullable: false
+                name: subscriber_id
+                type: BIGINT
+          tableName: subscriptions
       - createTable:
           columns:
             - column:
@@ -160,8 +221,13 @@ databaseChangeLog:
       - createTable:
           columns:
             - column:
-                name: role_id
-                type: INTEGER
+                autoIncrement: true
+                constraints:
+                  nullable: false
+                  primaryKey: true
+                  primaryKeyName: users_roles_pkey
+                name: user_role_id
+                type: BIGINT
             - column:
                 constraints:
                   nullable: false
@@ -173,30 +239,14 @@ databaseChangeLog:
                 name: updated_at
                 type: TIMESTAMP WITHOUT TIME ZONE
             - column:
-                name: user_id
-                type: BIGINT
+                name: role_id
+                type: INTEGER
             - column:
-                autoIncrement: true
-                constraints:
-                  nullable: false
-                  primaryKey: true
-                  primaryKeyName: users_roles_pkey
-                name: user_role_id
+                name: user_id
                 type: BIGINT
           tableName: users_roles
       - createTable:
           columns:
-            - column:
-                name: course_id
-                type: BIGINT
-            - column:
-                name: user_id
-                type: BIGINT
-            - column:
-                constraints:
-                  nullable: false
-                name: video_created_at
-                type: TIMESTAMP WITHOUT TIME ZONE
             - column:
                 autoIncrement: true
                 constraints:
@@ -208,7 +258,7 @@ databaseChangeLog:
             - column:
                 constraints:
                   nullable: false
-                name: video_updated_at
+                name: video_created_at
                 type: TIMESTAMP WITHOUT TIME ZONE
             - column:
                 name: video_description
@@ -219,18 +269,26 @@ databaseChangeLog:
             - column:
                 constraints:
                   nullable: false
-                name: video_link
-                type: VARCHAR(255)
-            - column:
-                constraints:
-                  nullable: false
                 name: video_title
                 type: VARCHAR(255)
             - column:
                 constraints:
                   nullable: false
+                name: video_updated_at
+                type: TIMESTAMP WITHOUT TIME ZONE
+            - column:
+                constraints:
+                  nullable: false
                 name: video_uuid
                 type: VARCHAR(255)
+            - column:
+                constraints:
+                  nullable: false
+                name: video_link
+                type: VARCHAR(255)
+            - column:
+                name: course_id
+                type: BIGINT
           tableName: videos
       - createTable:
           columns:
@@ -239,68 +297,90 @@ databaseChangeLog:
                   nullable: false
                   primaryKey: true
                   primaryKeyName: roles_authorities_pkey
-                name: auth_id
+                name: role_id
                 type: INTEGER
             - column:
                 constraints:
                   nullable: false
                   primaryKey: true
                   primaryKeyName: roles_authorities_pkey
-                name: role_id
+                name: auth_id
                 type: INTEGER
           tableName: roles_authorities
       - addUniqueConstraint:
           columnNames: authority_name
-          constraintName: authorities_authority_name_key
+          constraintName: uk_4gictf1bsadhdebtwbanm6d21
           tableName: authorities
       - addUniqueConstraint:
           columnNames: category_name
-          constraintName: categories_category_name_key
+          constraintName: uk_41g4n0emuvcm3qyf1f6cn43c0
           tableName: categories
       - addUniqueConstraint:
           columnNames: course_title
-          constraintName: courses_course_title_key
+          constraintName: uk_cjsjcjmok6ooqbececvhacmpr
           tableName: courses
       - addUniqueConstraint:
           columnNames: course_uuid
-          constraintName: courses_course_uuid_key
+          constraintName: uk_gjyju0yxx2rk2ca9y6xxc3vq
           tableName: courses
       - addUniqueConstraint:
           columnNames: role_name
-          constraintName: roles_role_name_key
+          constraintName: uk_716hgxp60ym1lifrdgp67xt5k
           tableName: roles
       - addUniqueConstraint:
+          columnNames: course_id, subscription_id
+          constraintName: ukg76axr2atmwr0awrimrnlamme
+          tableName: subscription_details
+      - addUniqueConstraint:
           columnNames: user_email
-          constraintName: users_user_email_key
-          tableName: users
-      - addUniqueConstraint:
-          columnNames: user_phone_number
-          constraintName: users_user_phone_number_key
-          tableName: users
-      - addUniqueConstraint:
-          columnNames: user_username
-          constraintName: users_user_username_key
+          constraintName: uk_33uo7vet9c79ydfuwg1w848f
           tableName: users
       - addUniqueConstraint:
           columnNames: user_uuid
-          constraintName: users_user_uuid_key
+          constraintName: uk_4mcg6l0va97nbd8o9tqpeg104
+          tableName: users
+      - addUniqueConstraint:
+          columnNames: user_username
+          constraintName: uk_bcy4eb602iyorjjc2cklf53cf
+          tableName: users
+      - addUniqueConstraint:
+          columnNames: user_phone_number
+          constraintName: uk_te75vby8rv7y1qqply0jty8cy
           tableName: users
       - addUniqueConstraint:
           columnNames: user_id, role_id
           constraintName: ukq3r1u8cne2rw2hkr899xuh7vj
           tableName: users_roles
       - addUniqueConstraint:
-          columnNames: user_id, role_id
-          constraintName: users_roles_user_id_role_id_key
-          tableName: users_roles
-      - addUniqueConstraint:
           columnNames: video_uuid
-          constraintName: videos_video_uuid_key
+          constraintName: uk_fyw54ldr8tm5wmev84o92lqr2
           tableName: videos
       - addForeignKeyConstraint:
           baseColumnNames: user_id
           baseTableName: users_roles
           constraintName: fk2o0jvgh89lemvvo17cbqvdxaa
+          deferrable: false
+          initiallyDeferred: false
+          onDelete: NO ACTION
+          onUpdate: NO ACTION
+          referencedColumnNames: user_id
+          referencedTableName: users
+          validate: true
+      - addForeignKeyConstraint:
+          baseColumnNames: author_id
+          baseTableName: subscriptions
+          constraintName: fk4bxo233kaf6qxfj4g4jp55bnx
+          deferrable: false
+          initiallyDeferred: false
+          onDelete: NO ACTION
+          onUpdate: NO ACTION
+          referencedColumnNames: user_id
+          referencedTableName: users
+          validate: true
+      - addForeignKeyConstraint:
+          baseColumnNames: user_id
+          baseTableName: courses
+          constraintName: fk51k53m6m5gi9n91fnlxkxgpmv
           deferrable: false
           initiallyDeferred: false
           onDelete: NO ACTION
@@ -320,15 +400,15 @@ databaseChangeLog:
           referencedTableName: categories
           validate: true
       - addForeignKeyConstraint:
-          baseColumnNames: user_id
-          baseTableName: videos
-          constraintName: fk75696octon297ywni28sk19ek
+          baseColumnNames: course_id
+          baseTableName: subscription_details
+          constraintName: fkbprhkgjstwhny3l0wb7voqcq2
           deferrable: false
           initiallyDeferred: false
           onDelete: NO ACTION
           onUpdate: NO ACTION
-          referencedColumnNames: user_id
-          referencedTableName: users
+          referencedColumnNames: course_id
+          referencedTableName: courses
           validate: true
       - addForeignKeyConstraint:
           baseColumnNames: auth_id
@@ -351,6 +431,28 @@ databaseChangeLog:
           onUpdate: NO ACTION
           referencedColumnNames: role_id
           referencedTableName: roles
+          validate: true
+      - addForeignKeyConstraint:
+          baseColumnNames: subscription_id
+          baseTableName: subscription_details
+          constraintName: fkoep5c7s644f1it0n71w87q17i
+          deferrable: false
+          initiallyDeferred: false
+          onDelete: NO ACTION
+          onUpdate: NO ACTION
+          referencedColumnNames: subscription_id
+          referencedTableName: subscriptions
+          validate: true
+      - addForeignKeyConstraint:
+          baseColumnNames: subscriber_id
+          baseTableName: subscriptions
+          constraintName: fkoodc4352epkjrvxx79odlxbji
+          deferrable: false
+          initiallyDeferred: false
+          onDelete: NO ACTION
+          onUpdate: NO ACTION
+          referencedColumnNames: user_id
+          referencedTableName: users
           validate: true
       - addForeignKeyConstraint:
           baseColumnNames: role_id
