--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,4 +4,10 @@ databaseChangeLog:
   - include:
       file: db/changelog/002_insert_authorities.yml
   - include:
+      file: db/changelog/003_insert_roles.yml
+  - include:
+      file: db/changelog/004_insert_roles_authorities.yml
+  - include:
+      file: db/changelog/005_insert_categories.yml
+  - include:
       file: db/changelog/sql-changing-sequence.yml
