--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # configure server port
-server.port=8080
+server.port=${SERVER_PORT}
 
 # configure active profile
 spring.profiles.active=dev
 
 # configure datasource
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=videocoursepostgres
-spring.datasource.password=videocoursepostgres@123
-spring.datasource.url=jdbc:postgresql://localhost:5432/videocoursedb
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # configure jpa
 spring.jpa.open-in-view=false
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # configure liquibase
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 
 # configure thymeleaf
 spring.thymeleaf.check-template-location=false
@@ -27,19 +27,19 @@ spring.thymeleaf.check-template-location=false
 springdoc.swagger-ui.path=/docs
 
 # configure file system and classpath resources
-file.server-path=D:\\Documents\\video course api\\
-file.client-path=/file/**
-file.base-uri=http://localhost:8080/file/
-file.download-uri=http://localhost:8080/api/v1/files/download/
+file.server-path=${FILE_SERVER_PATH}
+file.client-path=${FILE_CLIENT_PATH}
+file.base-uri=${FILE_BASE_URI}
+file.download-uri=${FILE_DOWNLOAD_URI}
 
 # configure file upload
 spring.servlet.multipart.max-request-size=15MB
 spring.servlet.multipart.max-file-size=15MB
 
 # configure mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=suonvicheak991@gmail.com
-spring.mail.password=ceno lwln bgvw jujv
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
