--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ DB_NAME=videocoursedb
 # configure file system and classpath resources
 FILE_SERVER_PATH=D:\\Documents\\video course api\\
 FILE_CLIENT_PATH=/file/**
-FILE_BASE_URI==http://localhost:8080/file/
+FILE_BASE_URI=http://localhost:8080/file/
 FILE_DOWNLOAD_URI=http://localhost:8080/api/v1/files/download/
 
 # configure mail
