--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # configure liquibase
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 
 # configure thymeleaf
 spring.thymeleaf.check-template-location=false
@@ -43,3 +43,9 @@ spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# configure token key path
+access-token.private=keys/access-token-private
+access-token.public=keys/access-token-public
+refresh-token.private=keys/refresh-token-private
+refresh-token.public=keys/refresh-token-public
