--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # configure liquibase
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 
 # configure thymeleaf
 spring.thymeleaf.check-template-location=false
