--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,11 +2,18 @@
 SERVER_PORT=8080
 
 # configure datasource
-DB_USERNAME=videocoursepostgres
-DB_PASSWORD=videocoursepostgres@123
-DB_HOST=localhost
+# DB_USERNAME=videocoursepostgres
+# DB_PASSWORD=videocoursepostgres@123
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_NAME=videocoursedb
+
+DB_USERNAME=videocourseadmin
+DB_PASSWORD=videocourseadmin@123
+DB_HOST=videocourse_db
 DB_PORT=5432
 DB_NAME=videocoursedb
+
 
 # configure file system and classpath resources
 FILE_SERVER_PATH=D:\\Documents\\video course api\\
